feat: introduce new DTOs for analytics calculations and update service methods and new tests
feat: add new DTOs for date range parameters and update analytics controllers to use them

refactor: update endpoint paths for analytics controllers and remove unused DTOs

chore: restructure Docker setup by adding new Dockerfiles and removing obsolete configurations

feat: add Dockerfile for test environment and update development Dockerfile for improved command execution

chore: update restart policies for MariaDB services in docker-compose.yml

improvements: remove obsolete DTOs and enhance validations e documantation.