@@ -1,17 +1,13 @@
 package leonardo.labutilities.qualitylabpro.controllers.analytics;
 
-import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
-import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springdoc.core.annotations.ParameterObject;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
 import org.springframework.hateoas.CollectionModel;
 import org.springframework.hateoas.EntityModel;
-import org.springframework.hateoas.Link;
 import org.springframework.http.ResponseEntity;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -21,13 +17,12 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
-import org.springframework.web.util.UriComponentsBuilder;
 import jakarta.validation.Valid;
-import leonardo.labutilities.qualitylabpro.dtos.analytics.AnalyticsDTO;
-import leonardo.labutilities.qualitylabpro.dtos.analytics.GroupedMeanAndStdByLevelDTO;
-import leonardo.labutilities.qualitylabpro.dtos.analytics.GroupedResultsByLevelDTO;
-import leonardo.labutilities.qualitylabpro.dtos.analytics.UpdateAnalyticsMeanDTO;
+import leonardo.labutilities.qualitylabpro.dtos.analytics.requests.UpdateAnalyticsMeanDTO;
+import leonardo.labutilities.qualitylabpro.dtos.analytics.responses.AnalyticsDTO;
+import leonardo.labutilities.qualitylabpro.dtos.analytics.responses.GroupedMeanAndStdByLevelDTO;
+import leonardo.labutilities.qualitylabpro.dtos.analytics.responses.GroupedResultsByLevelDTO;
+import leonardo.labutilities.qualitylabpro.helpers.AnalyticsHelperUtility;
 import leonardo.labutilities.qualitylabpro.services.analytics.AbstractAnalyticHelperService;
 
 public class AnalyticsHelperController {
@@ -52,7 +47,7 @@ public class AnalyticsHelperController {
 	@PostMapping
 	@Transactional
 	public ResponseEntity<List<AnalyticsDTO>> postAnalytics(
-			@Valid @RequestBody List<@Valid AnalyticsDTO> values) {
+			@Valid @RequestBody List<leonardo.labutilities.qualitylabpro.dtos.analytics.responses.AnalyticsDTO> values) {
 		this.analyticHelperService.saveNewAnalyticsRecords(values);
 		return ResponseEntity.status(201).build();
 	}
@@ -91,11 +86,12 @@ public class AnalyticsHelperController {
 		Page<AnalyticsDTO> resultsList =
 				this.analyticHelperService.findAnalyticsPagedByNameIn(names, pageable);
 
-		var entityModels = resultsList.getContent().stream()
-				.map(analyticsRecord -> this.createEntityModel(analyticsRecord, pageable)).toList();
+		var entityModels =
+				resultsList.getContent().stream().map(analyticsRecord -> AnalyticsHelperUtility
+						.createEntityModel(analyticsRecord, pageable, this)).toList();
 
-		var result =
-				this.addPaginationLinks(CollectionModel.of(entityModels), resultsList, pageable);
+		var result = AnalyticsHelperUtility.addPaginationLinks(CollectionModel.of(entityModels),
+				resultsList, pageable);
 		return ResponseEntity.ok(result);
 	}
 
@@ -111,66 +107,14 @@ public class AnalyticsHelperController {
 		}
 
 		var entityModels = analyticsRecordPaged.getContent().stream()
-				.map(record -> this.createEntityModel(record, pageable))
-				.collect(Collectors.toList());
+				.map(analyticsRecord -> AnalyticsHelperUtility.createEntityModel(analyticsRecord,
+						pageable, this))
+				.toList();
 
 		var collectionModel = CollectionModel.of(entityModels);
-		var result = this.addPaginationLinks(collectionModel, analyticsRecordPaged, pageable);
+		var result = AnalyticsHelperUtility.addPaginationLinks(collectionModel,
+				analyticsRecordPaged, pageable);
 
 		return ResponseEntity.ok(result);
-	}
-
-	EntityModel<AnalyticsDTO> createEntityModel(AnalyticsDTO analyticsRecord, Pageable pageable) {
-		return EntityModel.of(analyticsRecord,
-				Link.of(ServletUriComponentsBuilder.fromCurrentContextPath().path("/backend").path(
-						linkTo(methodOn(this.getClass()).getAnalyticsById(analyticsRecord.id()))
-								.toUri().getPath())
-						.toUriString()).withSelfRel());
-	}
-
-	private CollectionModel<EntityModel<AnalyticsDTO>> addPaginationLinks(
-			CollectionModel<EntityModel<AnalyticsDTO>> collectionModel, Page<AnalyticsDTO> page,
-			Pageable pageable) {
-
-		UriComponentsBuilder uriBuilder =
-				ServletUriComponentsBuilder.fromCurrentRequest().replacePath("/backend-api"
-						+ ServletUriComponentsBuilder.fromCurrentRequest().build().getPath());
-
-		// Link for the first page
-		collectionModel.add(Link.of(uriBuilder.replaceQueryParam("page", 0)
-				.replaceQueryParam("size", pageable.getPageSize()).toUriString()
-				.replace("%2520", "%20")).withRel("first"));
-
-		// Link for the previous page if it exists
-		if (page.hasPrevious()) {
-			collectionModel
-					.add(Link.of(uriBuilder.replaceQueryParam("page", pageable.getPageNumber() - 1)
-							.replaceQueryParam("size", pageable.getPageSize()).toUriString()
-							.replace("%2520", "%20")).withRel("prev"));
-		}
-
-		// Link for the next page if it exists
-		if (page.hasNext()) {
-			collectionModel
-					.add(Link.of(uriBuilder.replaceQueryParam("page", pageable.getPageNumber() + 1)
-							.replaceQueryParam("size", pageable.getPageSize()).toUriString()
-							.replace("%2520", "%20")).withRel("next"));
-		}
-
-		// Link for the last page
-		collectionModel.add(Link.of(uriBuilder.replaceQueryParam("page", page.getTotalPages() - 1)
-				.replaceQueryParam("size", pageable.getPageSize()).toUriString()
-				.replace("%2520", "%20")).withRel("last"));
-
-		// Add metadata about the current page
-		collectionModel.add(Link.of(uriBuilder.replaceQueryParam("page", pageable.getPageNumber())
-				.replaceQueryParam("size", pageable.getPageSize()).toUriString()
-				.replace("%2520", "%20")).withRel("current-page"));
-
-		collectionModel.add(Link.of(String.valueOf(page.getTotalPages()), "totalPages"));
-		collectionModel.add(Link.of(String.valueOf(page.getNumber()), "currentPage"));
-
-
-		return collectionModel;
 	}
 }
